--- a/src/homepage.html
+++ b/src/homepage.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="styles.css">
     <title>My personal website</title>
-</head>
-<body>
+  </head>
+
+  <body>
+    <header>
+      <div class="navbar">
+        <div class="title">Abba's Website</div>
+        <ul class="links">
+          <li><a href="./homepage.html">Home</a></li>
+          <li><a href="./projects.html">Projects</a></li>
+          <li><a href="#">Contact Me</a></li>
+        </ul>
+        <div class="toggle-btn">
+          <i class="fa-solid fa-bars"></i>
+        </div>
+      </div>
+    </header>
+
+    <h1>My Website</h1>
+    <section id="initial-section" class="initial-section">
+        <p>Let me show you my journey as a software engineer.</p>
+        <img src="./assets/" alt="Picture">
+    </section>
+
+    <section id="quote-section">
+        <img src="./assets/" alt="picture">
+        <p>"some quote"</p>
+    </section>
+
+    <section id="main-section">
+
+    </section>
     
-</body>
+  </body>
 </html>
