--- a/src/projects.html
+++ b/src/projects.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projects</title>
+
+
 </head>
 <body>
+  <header>
+    <div class="navbar">
+      <div class="title">Abba's Website</div>
+      <ul class="links">
+        <li><a href="./homepage.html">Home</a></li>
+        <li><a href="./projects.html">Projects</a></li>
+        <li><a href="#">Contact Me</a></li>
+      </ul>
+      <div class="toggle-btn">
+        <i class="fa-solid fa-bars"></i>
+      </div>
+    </div>
+  </header>
     
 </body>
 </html>
