Made a navbar and a hero section.

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="script.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
     <title>My personal website</title>
   </head>
-
+ 
   <body>
     <header>
       <div class="navbar">
@@ -25,20 +25,40 @@
           <i class="fa-solid fa-bars"></i>
         </div>
       </div>
+ 
+      <div class="dropdown-menu">
+        <li><a href="./homepage.html">Home</a></li>
+        <li><a href="./projects.html">Projects</a></li>
+        <li><a href="#">Contact Me</a></li>
+      </div>
     </header>
 
-    <h1>My Website</h1>
     <section id="initial-section" class="initial-section">
-        <p>Let me show you my journey as a software engineer.</p>
-        <img src="./assets/" alt="Picture">
+      <div class="initial-text">
+        <h2>Let me show you my journey as a software engineer.</h2>
+      </div>
+      <div class="initial-img">
+        <img id= "first-img" src="./assets/OIP.jpeg" alt="Picture">
+      </div>
     </section>
-
+ 
     <section id="quote-section">
-        <img src="./assets/" alt="picture">
-        <p>"some quote"</p>
-    </section>
+      <div class="quote-img"><img src="#" alt="picture"></div>
 
+      <div class="quote">
+        <blockquote>
+          "The function of good software is to make the complex appear to be simple."
+          <footer>- <cite>Grady Booch</cite></footer>
+        </blockquote>
+        <p>"The function of good software is to make the complex appear to be simple." - Grady Booch"</p>
+      </div>
+    </section>
+ 
     <section id="main-section">
+      <p>I am currently a software engineering apprentice at Leonardo</p>
+      <p>The main languages i use are python and c++, but python is my favourite.</p>
+      <p>I hope to one day have my own company in tech. Im still not sure what exactly my company will do.</p>
+      <p></p>
 
     </section>
     
