--- a/src/homepage.html
+++ b/src/homepage.html
@@ -33,32 +33,70 @@
       </div>
     </header>
 
-    <section id="initial-section" class="initial-section">
+    <section class="initial-section">
       <div class="initial-text">
         <h2>Let me show you my journey as a software engineer.</h2>
       </div>
       <div class="initial-img">
-        <img id= "first-img" src="./assets/OIP.jpeg" alt="Picture">
+        <img id= "first-img" src="./assets/programmer.svg" alt="Picture">
       </div>
     </section>
  
-    <section id="quote-section">
-      <div class="quote-img"><img src="#" alt="picture"></div>
+    <section class="quote-section">
+      <div class="quote-img"><img src="./assets/code-reveiw.svg" alt="picture"></div>
 
       <div class="quote">
         <blockquote>
-          "The function of good software is to make the complex appear to be simple."
+          The function of good software is to make the complex appear to be simple.
           <footer>- <cite>Grady Booch</cite></footer>
         </blockquote>
-        <p>"The function of good software is to make the complex appear to be simple." - Grady Booch"</p>
       </div>
     </section>
  
-    <section id="main-section">
+    <section class="main-section">
+      <div class="journey-item">
+        <div class="journey-item-text">
+          <h2>High School</h2>
+          <p>I fell in love with coding in high school, where I was lucky to have a teacher<br>
+            who saw potential in my curiosity and enthusiasm. Their encouragement led me to delve <br>
+            deeper into computer science. Coding challenges became puzzles that I was eager to <br>
+            solve, and I found joy in creating functional, efficient solutions. My teacher's <br>
+            inspiring words always echoed in my mind, motivating me to never stop learning and experimenting.</p>
+        </div>
+
+        <img src="./assets/teacher.svg" alt="high school coding">
+      </div>
+
+      <div class="journey-item">
+        <img src="./assets/university.svg" alt="university coding">
+        <div class="journey-item-text">
+          <h2>University Applications</h2>
+          <p>"As I neared the end of my high school years, I was faced with the choice of my future path. <br>
+            I applied to study Computer Engineering in University, driven by the dream of <br>
+            becoming a software engineer. It was a field that promised endless opportunities for <br>
+            learning and innovation, two aspects that I cherished deeply."</p>
+        </div>
+        <p>I then went on to university where I majored in Computer Science.</p>
+      </div>
+
+      <div class="journey-item">
+        <div class="journey-item-text">
+          <h2>The Current Stage</h2>
+          <p>However, life took an exciting turn, and I found myself accepting an apprenticeship <br>
+            at a prestigious company called Leonardo. Opting for an apprenticeship over traditional <br>
+            university education allowed me to immerse myself in the practical aspects of <br>
+            the field. It offered me an invaluable opportunity to learn from seasoned professionals <br>
+            and gain hands-on experience. This blend of learning and doing has been instrumental in <br>
+            shaping me into the engineer I am today.</p>
+        </div>
+        <img src="./assets/software_engineer.svg" alt="working as a software engineer">
+      </div>
+
+
+
       <p>I am currently a software engineering apprentice at Leonardo</p>
       <p>The main languages i use are python and c++, but python is my favourite.</p>
       <p>I hope to one day have my own company in tech. Im still not sure what exactly my company will do.</p>
-      <p></p>
 
     </section>
     
