--- a/src/homepage.html
+++ b/src/homepage.html
@@ -8,18 +8,18 @@
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <script src="headerScript.js" defer></script>
     <title>My personal website</title>
   </head>
  
-  <body>
+  <body id="homepage-body">
     <header>
       <div class="navbar">
         <div class="title">Abba's Website</div>
         <ul class="links">
           <li><a href="./homepage.html">Home</a></li>
           <li><a href="./projects.html">Projects</a></li>
-          <li><a href="#">Contact Me</a></li>
+          <li><a href="./contact.html">Contact Me</a></li>
         </ul>
         <div class="toggle-btn">
           <i class="fa-solid fa-bars"></i>
@@ -29,15 +29,15 @@
       <div class="dropdown-menu">
         <li><a href="./homepage.html">Home</a></li>
         <li><a href="./projects.html">Projects</a></li>
-        <li><a href="#">Contact Me</a></li>
+        <li><a href="./contact.html">Contact Me</a></li>
       </div>
     </header>
 
-    <section class="initial-section">
-      <div class="initial-text">
+    <section class="hero-section">
+      <div class="hero-text">
         <h2>Let me show you my journey as a software engineer.</h2>
       </div>
-      <div class="initial-img">
+      <div class="hero-img">
         <img id= "first-img" src="./assets/programmer.svg" alt="Picture">
       </div>
     </section>
@@ -54,13 +54,15 @@
     </section>
  
     <section class="main-section">
+      <h1>My Journey</h1>
+
       <div class="journey-item">
         <div class="journey-item-text">
           <h2>High School</h2>
-          <p>I fell in love with coding in high school, where I was lucky to have a teacher<br>
-            who saw potential in my curiosity and enthusiasm. Their encouragement led me to delve <br>
-            deeper into computer science. Coding challenges became puzzles that I was eager to <br>
-            solve, and I found joy in creating functional, efficient solutions. My teacher's <br>
+          <p>I started my journey with coding in high school, where I was lucky to have a teacher
+            who saw potential in my curiosity and enthusiasm. Their encouragement led me to delve 
+            deeper into computer science. Coding challenges became puzzles that I was eager to 
+            solve, and I found joy in creating functional, efficient solutions. My teacher's 
             inspiring words always echoed in my mind, motivating me to never stop learning and experimenting.</p>
         </div>
 
@@ -71,34 +73,33 @@
         <img src="./assets/university.svg" alt="university coding">
         <div class="journey-item-text">
           <h2>University Applications</h2>
-          <p>"As I neared the end of my high school years, I was faced with the choice of my future path. <br>
-            I applied to study Computer Engineering in University, driven by the dream of <br>
-            becoming a software engineer. It was a field that promised endless opportunities for <br>
+          <p>"As I neared the end of my high school years, I was faced with the choice of my future path. 
+            I applied to study Computer Engineering in University, driven by the dream of 
+            becoming a software engineer. It was a field that promised endless opportunities for 
             learning and innovation, two aspects that I cherished deeply."</p>
-        </div>
-        <p>I then went on to university where I majored in Computer Science.</p>
+          </div>
       </div>
 
       <div class="journey-item">
         <div class="journey-item-text">
           <h2>The Current Stage</h2>
-          <p>However, life took an exciting turn, and I found myself accepting an apprenticeship <br>
-            at a prestigious company called Leonardo. Opting for an apprenticeship over traditional <br>
-            university education allowed me to immerse myself in the practical aspects of <br>
-            the field. It offered me an invaluable opportunity to learn from seasoned professionals <br>
-            and gain hands-on experience. This blend of learning and doing has been instrumental in <br>
+          <p>However, life took an exciting turn, and I found myself accepting 
+            an apprenticeship at a prestigious company called Leonardo. Opting 
+            for an apprenticeship over traditional university education allowed me
+            to immerse myself in the practical aspects of the field. It offered me an 
+            invaluable opportunity to learn from seasoned professionals and gain 
+            hands-on experience. This blend of learning and doing has been instrumental in 
             shaping me into the engineer I am today.</p>
         </div>
         <img src="./assets/software_engineer.svg" alt="working as a software engineer">
       </div>
-
-
-
-      <p>I am currently a software engineering apprentice at Leonardo</p>
-      <p>The main languages i use are python and c++, but python is my favourite.</p>
-      <p>I hope to one day have my own company in tech. Im still not sure what exactly my company will do.</p>
-
     </section>
+
+    <footer>
+      <div class="footer-container">
+        <p>&copy; Abba's Website - All rights reserved</p>
+      </div>
+    </footer>
     
   </body>
 </html>
